# task-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  gui.py  modules.py  routes.py
