[project]
name = "taskmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "babel==2.18.0",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "mysql-connector-python==9.5.0",
    "packaging==26.0",
    "pillow==12.1.0",
    "pyglet==2.1.13",
    "tkcalendar==1.6.1",
]
